chore: reformat config file (#524)
* 将 restful 端口从 6666 设为 7888

* 将 filesystem 默认端口从 6667 设为 6668

* 重新排序config文件

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -33,27 +33,74 @@ username=root
 # iginx 本身的密码
 password=root
 
+##########################
+### 数据库配置
+##########################
+
 # 数据库列表，使用','分隔不同实例
-storageEngineList=127.0.0.1#6667#iotdb12#username=root#password=root#sessionPoolSize=20#has_data=false#is_read_only=false
+#storageEngineList=127.0.0.1#6667#iotdb12#username=root#password=root#sessionPoolSize=20#has_data=false#is_read_only=false
 #storageEngineList=127.0.0.1#8086#influxdb#url=http://localhost:8086/#token=your-token#organization=your-organization#has_data=false
-#storageEngineList=127.0.0.1#6667#filesystem#iginx_port=6888#has_data=false#is_read_only=false#dir=data#data.config.write.buffer.size=104857600#data.config.write.buffer.timeout=0#dummy_dir=dummy#dummy.struct=LegacyFilesystem#dummy.config.chunk_size_in_bytes=1048576#dummy.config.memory_pool_size=100#client.connectPool.maxTotal=100
+storageEngineList=127.0.0.1#6668#filesystem#iginx_port=6888#has_data=false#is_read_only=false#dir=data#data.config.write.buffer.size=104857600#data.config.write.buffer.timeout=0#dummy_dir=dummy#dummy.struct=LegacyFilesystem#dummy.config.chunk_size_in_bytes=1048576#dummy.config.memory_pool_size=100#client.connectPool.maxTotal=100
 #storageEngineList=127.0.0.1#5432#relational#engine=postgresql#username=postgres#password=postgres#has_data=false
 #storageEngineList=127.0.0.1#3306#relational#engine=mysql#username=root#password=mysql#has_data=false#meta_properties_path=your-meta-properties-path
 #storageEngineList=127.0.0.1#27017#mongodb#uri="mongodb://127.0.0.1:27017/?maxPoolSize=200&maxIdleTimeMS=60000&waitQueueTimeoutMS=50000"#has_data=false#schema.sample.size=1000#dummy.sample.size=0
 #storageEngineList=127.0.0.1#6379#redis#has_data=false#is_read_only=false#timeout=10000#data_db=1#dummy_db=0
 
-# UDF定义文件夹存储路径（相对或绝对），文件夹内的文件需要按以下格式进行编写
-# %defaultUDFDir%
-#   |- udf_list         (udf函数列表及元信息文件)
-#   |- python_scripts/   (python脚本文件夹)
-#       |- xxx.py       (python脚本)
-defaultUDFDir=udf_funcs
+# 底层数据库类名
+databaseClassNames=iotdb12=cn.edu.tsinghua.iginx.iotdb.IoTDBStorage,influxdb=cn.edu.tsinghua.iginx.influxdb.InfluxDBStorage,filesystem=cn.edu.tsinghua.iginx.filesystem.FileSystemStorage,relational=cn.edu.tsinghua.iginx.relational.RelationalStorage,mongodb=cn.edu.tsinghua.iginx.mongodb.MongoDBStorage,redis=cn.edu.tsinghua.iginx.redis.RedisStorage
+
+##########################
+### 分片配置
+##########################
 
 # 写入的副本个数
 replicaNum=0
 
-# 底层数据库类名
-databaseClassNames=iotdb12=cn.edu.tsinghua.iginx.iotdb.IoTDBStorage,influxdb=cn.edu.tsinghua.iginx.influxdb.InfluxDBStorage,filesystem=cn.edu.tsinghua.iginx.filesystem.FileSystemStorage,relational=cn.edu.tsinghua.iginx.relational.RelationalStorage,mongodb=cn.edu.tsinghua.iginx.mongodb.MongoDBStorage,redis=cn.edu.tsinghua.iginx.redis.RedisStorage
+# 分片策略
+policyClassName=cn.edu.tsinghua.iginx.policy.naive.NaivePolicy
+#policyClassName=cn.edu.tsinghua.iginx.policy.simple.SimplePolicy
+
+# 重分片时，新分片的结束时间多加的间距，单位为秒
+reshardFragmentTimeMargin=60
+
+##########################
+### 统计信息配置
+##########################
+
+#统计信息收集类
+# statisticsCollectorClassName=cn.edu.tsinghua.iginx.statistics.StatisticsCollector
+
+# 统计信息打印间隔，单位毫秒
+# statisticsLogInterval=5000
+
+##########################
+### Session 配置
+##########################
+
+# thrift线程池最小线程数量
+minThriftWorkerThreadNum = 20
+
+# thrift线程池最大线程数量
+maxThriftWrokerThreadNum = 2147483647
+
+##########################
+### 逻辑层配置
+##########################
+
+# 约束
+constraintChecker=naive
+
+# 逻辑层优化策略
+queryOptimizer=rbo
+
+# 优化器规则
+ruleBasedOptimizer=NotFilterRemoveRule=on,ColumnPruningRule=on,ConstantPropagationRule=on,DistinctEliminateRule=on,\
+  ConstantFoldingRule=on,FilterPushDownRule=on,JoinFactorizationRule=on,SetTransformPushDownPathUnionJoinRule=on,InFilterTransformRule=on,\
+  OuterJoinEliminateRule=on
+
+##########################
+### 执行层配置
+##########################
 
 # 内存任务执行线程池
 memoryTaskThreadPoolSize=200
@@ -64,13 +111,12 @@ physicalTaskThreadPoolSizePerStorage=100
 # 每个存储节点任务最大堆积数
 maxCachedPhysicalTaskPerStorage=500
 
-# 逻辑层优化策略
-queryOptimizer=rbo
+# 物理层优化策略
+physicalOptimizer=naive
 
-# 优化器规则
-ruleBasedOptimizer=NotFilterRemoveRule=on,ColumnPruningRule=on,ConstantPropagationRule=on,DistinctEliminateRule=on,\
-  ConstantFoldingRule=on,FilterPushDownRule=on,JoinFactorizationRule=on,SetTransformPushDownPathUnionJoinRule=on,InFilterTransformRule=on,\
-  OuterJoinEliminateRule=on
+enablePushDown=true
+
+useStreamExecutor=false
 
 # ParallelFilter触发行数
 parallelFilterThreshold=10000
@@ -84,34 +130,6 @@ parallelGroupByPoolSize=5
 parallelGroupByPoolNum=5
 # ParallelGroupBy线程池数量
 streamParallelGroupByWorkerNum=5
-
-# 约束
-constraintChecker=naive
-
-# 物理层优化策略
-physicalOptimizer=naive
-
-# 分片策略
-policyClassName=cn.edu.tsinghua.iginx.policy.naive.NaivePolicy
-#policyClassName=cn.edu.tsinghua.iginx.policy.simple.SimplePolicy
-
-#统计信息收集类
-# statisticsCollectorClassName=cn.edu.tsinghua.iginx.statistics.StatisticsCollector
-
-# 统计信息打印间隔，单位毫秒
-# statisticsLogInterval=5000
-
-# 重分片时，新分片的结束时间多加的间距，单位为秒
-reshardFragmentTimeMargin=60
-
-# thrift线程池最小线程数量
-minThriftWorkerThreadNum = 20
-
-# thrift线程池最大线程数量
-maxThriftWrokerThreadNum = 2147483647
-
-# 当前是否是UT测试环境
-utTestEnv = false
 
 ####################
 ### Migration 相关配置
@@ -173,14 +191,6 @@ enableMetaCacheControl=false
 fragmentCacheThreshold=131072
 
 ##########################
-### 执行层配置
-##########################
-
-enablePushDown=true
-
-useStreamExecutor=false
-
-##########################
 ### 内存控制
 ##########################
 
@@ -202,7 +212,7 @@ systemCpuThreshold=0.9
 restIp=0.0.0.0
 
 # rest 绑定的端口
-restPort=6666
+restPort=7888
 
 # 是否启用 rest 服务
 enableRestService=true
@@ -225,6 +235,13 @@ pythonCMD=python3
 
 # 是否初始化配置文件内指定的UDF/Transform
 needInitBasicUDFFunctions=false
+
+# UDF定义文件夹存储路径（相对或绝对），文件夹内的文件需要按以下格式进行编写
+# %defaultUDFDir%
+#   |- udf_list         (udf函数列表及元信息文件)
+#   |- python_scripts/   (python脚本文件夹)
+#       |- xxx.py       (python脚本)
+defaultUDFDir=udf_funcs
 
 ##########################
 ### Transform配置
