--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -34,7 +34,7 @@ on:
                 default: "false"
 
 env:
-    FUNCTEST: NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,SessionIT,SessionPoolIT,CompactionIT,TimePrecisionIT,PySessionIT
+    FUNCTEST: TransformIT#verifyMultipleSqlStatements
 
 jobs:
     DB-CE:
@@ -92,11 +92,6 @@ jobs:
               with:
                   DB-name: ${{ matrix.DB-name }}
                   Test-Way: oriHasDataExpHasData
-
-            - name: oriHasDataExpHasData IT
-              shell: bash
-              run: |
-                  mvn test -q -Dtest=${{ matrix.DB-name }}CapacityExpansionIT#oriHasDataExpHasData -DfailIfNoTests=false -P-format
 
             - name: Clear history data
               uses: ./.github/actions/dbWriter
