only test mongo

--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -34,7 +34,7 @@ on:
                 default: "false"
 
 env:
-    FUNCTEST: TransformIT#verifyMultipleSqlStatements
+    FUNCTEST: TransformIT
 
 jobs:
     DB-CE:
