--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -34,7 +34,7 @@ on:
                 default: "false"
 
 env:
-    FUNCTEST: TransformIT
+    FUNCTEST: NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,SessionIT,SessionPoolIT,CompactionIT,TimePrecisionIT,PySessionIT
 
 jobs:
     DB-CE:
@@ -96,7 +96,7 @@ jobs:
             - name: oriHasDataExpHasData IT
               shell: bash
               run: |
-                mvn test -q -Dtest=${{ matrix.DB-name }}CapacityExpansionIT#oriHasDataExpHasData -DfailIfNoTests=false -P-format
+                  mvn test -q -Dtest=${{ matrix.DB-name }}CapacityExpansionIT#oriHasDataExpHasData -DfailIfNoTests=false -P-format
 
             - name: Clear history data
               uses: ./.github/actions/dbWriter
@@ -107,6 +107,86 @@ jobs:
             - name: oriHasDataExpHasData Normal IT
               shell: bash
               run: |
+                  mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false -P-format
+            # 第 2 阶段测试开始==========================================
+            - name: Prepare CapExp environment oriNoDataExpNoData
+              uses: ./.github/actions/capacityExpansionUnionTest
+              with:
+                  DB-name: ${{ matrix.DB-name }}
+                  Test-Way: oriNoDataExpNoData
+
+            - name: oriNoDataExpNoData IT
+              shell: bash
+              run: |
+                  mvn test -q -Dtest=${{ matrix.DB-name }}CapacityExpansionIT#oriNoDataExpNoData -DfailIfNoTests=false -P-format
+            - name: Clear history data
+              uses: ./.github/actions/dbWriter
+              with:
+                  DB-name: ${{ matrix.DB-name }}
+                  Test-Way: clearHistoryData
+
+            - name: oriNoDataExpNoData Normal IT
+              shell: bash
+              run: |
+                  mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false -P-format
+            # 第 3 阶段测试开始==========================================
+            - name: Prepare CapExp environment oriHasDataExpNoData
+              uses: ./.github/actions/capacityExpansionUnionTest
+              with:
+                  DB-name: ${{ matrix.DB-name }}
+                  Test-Way: oriHasDataExpNoData
+
+            - name: oriHasDataExpNoData IT
+              shell: bash
+              run: |
+                  mvn test -q -Dtest=${{ matrix.DB-name }}CapacityExpansionIT#oriHasDataExpNoData -DfailIfNoTests=false -P-format
+            - name: Clear history data
+              uses: ./.github/actions/dbWriter
+              with:
+                  DB-name: ${{ matrix.DB-name }}
+                  Test-Way: clearHistoryData
+
+            - name: oriHasDataExpNoData Normal IT
+              shell: bash
+              run: |
+                  mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false -P-format
+            # 第 4 阶段测试开始==========================================
+            - name: Prepare CapExp environment oriNoDataExpHasData
+              uses: ./.github/actions/capacityExpansionUnionTest
+              with:
+                  DB-name: ${{ matrix.DB-name }}
+                  Test-Way: oriNoDataExpHasData
+
+            - name: oriNoDataExpHasData IT
+              shell: bash
+              run: |
+                  mvn test -q -Dtest=${{ matrix.DB-name }}CapacityExpansionIT#oriNoDataExpHasData -DfailIfNoTests=false -P-format
+            - name: Clear history data
+              uses: ./.github/actions/dbWriter
+              with:
+                  DB-name: ${{ matrix.DB-name }}
+                  Test-Way: clearHistoryData
+
+            - name: oriNoDataExpHasData Normal IT
+              shell: bash
+              run: |
+                  mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false -P-format
+            # 测试只读节点===============================================
+            - name: Prepare CapExp environment for testReadOnly
+              uses: ./.github/actions/capacityExpansionUnionTest
+              with:
+                  DB-name: ${{ matrix.DB-name }}
+                  Test-Way: oriHasDataExpHasData
+                  Read-Only: true
+
+            - name: Run testReadOnly
+              shell: bash
+              env:
+                  SERVICE_DIR: "/home/runner/work/IGinX/IGinX/.github/actions/service"
+                  SERVICE_DIR_MAC: "/Users/runner/work/IGinX/IGinX/.github/actions/service"
+                  SERVICE_DIR_WIN: "/d/a/IGinX/IGinX/.github/actions/service"
+              run: |
+                  mvn test -q -Dtest=${{ matrix.DB-name }}CapacityExpansionIT#testReadOnly -DfailIfNoTests=false -P-format
                   mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false -P-format
 
             - name: Show IGinX log
