feat(core): allow null column

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -98,6 +98,8 @@ ruleBasedOptimizer=NotFilterRemoveRule=on,ColumnPruningRule=on,ConstantPropagati
   ConstantFoldingRule=on,FilterPushDownRule=on,JoinFactorizationRule=on,SetTransformPushDownPathUnionJoinRule=on,InFilterTransformRule=on,\
   OuterJoinEliminateRule=on
 
+#ruleBasedOptimizer=AllowNullColumnRule=on
+
 ##########################
 ### 执行层配置
 ##########################
