1.接入Oracle数据库

--- a/dataSource/relational/src/main/resources/postgresql-meta-template.properties
+++ b/dataSource/relational/src/main/resources/postgresql-meta-template.properties
@@ -32,6 +32,18 @@ quote="
 drop_database_statement=DROP DATABASE IF EXISTS %s WITH (FORCE);
 # \u521B\u5EFA\u6570\u636E\u5E93\u7684SQL\u8BED\u53E5
 create_database_statement=CREATE DATABASE %s;
+# \u521B\u5EFA\u8868
+create_table_statement=CREATE TABLE %s.%s (%s %s NOT NULL, %s %s, PRIMARY KEY(%s));
+# \u589E\u52A0\u8868\u5B57\u6BB5
+alter_table_add_column_statement=ALTER TABLE %s.%s ADD (%s %s);
+# \u5220\u9664\u8868\u5B57\u6BB5
+alter_table_drop_column_statement=ALTER TABLE %s.%s DROP COLUMN %s;
+# \u67E5\u8BE2\u8868
+query_table_statement = SELECT %s, %s FROM %s %s ORDER BY %s;
+#
+query_table_without_key_statement = SELECT %s FROM %s %s ORDER BY %s;
+# \u66F4\u65B0\u8868
+update_table_statement = UPDATE %s.%s SET %s = null WHERE (%s >= %d AND %s < %d);
 # \u00E5\u009C\u00A8JDBC\u00E4\u00BD\u00BF\u00E7\u0094\u00A8getTables\u00E6\u0097\u00B6\u00E6\u0098\u00AF\u00E5\u0090\u00A6\u00E9\u009C\u0080\u00E8\u00A6\u0081\u00E5\u008A\u00A0\u00E5\u00BC\u0095\u00E5\u008F\u00B7
 jdbc_need_quote=false
 # upsert\u00E8\u00AF\u00AD\u00E5\u008F\u00A5\u00E4\u00B8\u00AD\u00E9\u0097\u00B4\u00E9\u0083\u00A8\u00E5\u0088\u0086
