--- a/dataSource/relational/src/main/resources/oracle-meta-template.properties
+++ b/dataSource/relational/src/main/resources/oracle-meta-template.properties
@@ -45,11 +45,9 @@ query_table_statement = SELECT %s, %s FROM %s %s ORDER BY %s
 #
 query_table_without_key_statement = SELECT %s FROM %s %s ORDER BY %s
 # \u66F4\u65B0\u8868
-
 update_table_statement = UPDATE %s.%s SET %s = null WHERE (%s >= %d AND %s < %d)
-
 # \u5728JDBC\u4F7F\u7528getTables\u65F6\u662F\u5426\u9700\u8981\u52A0\u5F15\u53F7
-jdbc_need_quote=false
+jdbc_need_quote=true
 # upsert\u8BED\u53E5\u4E2D\u95F4\u90E8\u5206
 upsert_statement= MERGE INTO %s.%s T1 USING (%s) T2 ON (T1.%s = T2.%s) \
   WHEN MATCHED THEN \
@@ -68,18 +66,6 @@ regex_like_symbol=REGEXP_LIKE
 # filter\u4E2D\u4E0D\u5339\u914D\u6B63\u5219\u8868\u8FBE\u5F0F\u7684\u7B26\u53F7
 not_regex_like_symbol=NOT REGEXP_LIKE
 # jdbc\u5143\u6570\u636E\u83B7\u53D6\u662F\u5426\u652F\u6301\u7279\u6B8A\u5B57\u7B26\u8BC6\u522B
-jdbc_support_special_char=true
+jdbc_support_special_char=false
 
-# \u914D\u7F6E Oracle DataTypeTransformer
-#BOOLEAN=IGinX-BOOLEAN
-#INTEGER=IGinX-INTEGER
-#LONG=IGinX-LONG
-#DOUBLE=IGinX-DOUBLE
-#VARCHAR2=IGinX-BINARY
-## to engine type
-#IGinX-BOOLEAN=NUMBER(1)
-#IGinX-INTEGER=NUMBER(10)
-#IGinX-LONG=NUMBER(19)
-#IGinX-FLOAT=FLOAT
-#IGinX-DOUBLE=FLOAT
-#IGinX-BINARY=VARCHAR2(4000)
+# \u914D\u7F6E OracleLDataTypeTransformer
