--- a/.github/actions/dbLog/action.yml
+++ b/.github/actions/dbLog/action.yml
@@ -27,11 +27,11 @@ runs:
           working-directory: ${{ github.workspace }}
           shell: bash
           run: |
-              docker-compose -f 19530/docker-compose-19530.yml logs | tail -n 2000
+              docker-compose -f 19530/docker-compose-19530.yml logs
 
         - if: ${{ inputs.DB-name == 'VectorDB' && runner.os == 'Windows' }}
           name: Show Milvus Log on Windows
           working-directory: ${{ github.workspace }}
           shell: wsl-run {0}
           run: |
-              docker-compose -f 19530/docker-compose-19530.yml logs | tail -n 2000
+              docker-compose -f 19530/docker-compose-19530.yml logs
