--- a/dataSource/relational/src/main/resources/oracle-meta.properties
+++ b/dataSource/relational/src/main/resources/oracle-meta.properties
@@ -47,7 +47,7 @@ query_table_without_key_statement = SELECT %s FROM %s %s ORDER BY %s
 # \u66F4\u65B0\u8868
 update_table_statement = UPDATE %s.%s SET %s = null WHERE (%s >= %d AND %s < %d)
 # \u5728JDBC\u4F7F\u7528getTables\u65F6\u662F\u5426\u9700\u8981\u52A0\u5F15\u53F7
-jdbc_need_quote=true
+jdbc_need_quote=false
 # upsert\u8BED\u53E5\u4E2D\u95F4\u90E8\u5206
 upsert_statement= MERGE INTO %s.%s T1 USING (%s) T2 ON (T1.%s = T2.%s) \
   WHEN MATCHED THEN \
