--- a/dataSource/relational/src/main/resources/postgresql-meta.properties
+++ b/dataSource/relational/src/main/resources/postgresql-meta.properties
@@ -18,17 +18,17 @@
 # Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 #
 
-# \u00E9\u0085\u008D\u00E7\u00BD\u00AEPostgresql META\u00E4\u00BB\u00A5\u00E4\u00BE\u009BJDBCMeta\u00E8\u00AF\u00BB\u00E5\u008F\u0096
+# \u914D\u7F6EPostgresql META\u4EE5\u4F9BJDBCMeta\u8BFB\u53D6
 
-# \u00E9\u00A9\u00B1\u00E5\u008A\u00A8\u00E7\u00B1\u00BB
+# \u9A71\u52A8\u7C7B
 driver_class=org.postgresql.Driver
-# \u00E9\u00BB\u0098\u00E8\u00AE\u00A4\u00E6\u0095\u00B0\u00E6\u008D\u00AE\u00E5\u00BA\u0093
+# \u9ED8\u8BA4\u6570\u636E\u5E93
 default_database=postgres
-# \u00E7\u00B3\u00BB\u00E7\u00BB\u009F\u00E6\u0095\u00B0\u00E6\u008D\u00AE\u00E5\u00BA\u0093\u00EF\u00BC\u008C\u00E7\u0094\u00A8\u00E4\u00BA\u008E\u00E8\u00BF\u0087\u00E6\u00BB\u00A4
+# \u7CFB\u7EDF\u6570\u636E\u5E93\uFF0C\u7528\u4E8E\u8FC7\u6EE4
 system_databases=template0,template1,readme_to_recover
-# \u00E7\u0094\u00A8\u00E4\u00BA\u008E\u00E5\u008C\u0085\u00E8\u00A3\u00B9\u00E8\u00A1\u00A8\u00E5\u0090\u008D\u00E5\u0092\u008C\u00E5\u00AD\u0097\u00E6\u00AE\u00B5\u00E5\u0090\u008D\u00E7\u009A\u0084\u00E5\u00BC\u0095\u00E5\u008F\u00B7
+# \u7528\u4E8E\u5305\u88F9\u8868\u540D\u548C\u5B57\u6BB5\u540D\u7684\u5F15\u53F7
 quote="
-# \u00E5\u0088\u00A0\u00E9\u0099\u00A4\u00E6\u0095\u00B0\u00E6\u008D\u00AE\u00E5\u00BA\u0093\u00E7\u009A\u0084SQL\u00E8\u00AF\u00AD\u00E5\u008F\u00A5
+# \u5220\u9664\u6570\u636E\u5E93\u7684SQL\u8BED\u53E5
 drop_database_statement=DROP DATABASE IF EXISTS %s WITH (FORCE);
 # \u521B\u5EFA\u6570\u636E\u5E93\u7684SQL\u8BED\u53E5
 create_database_statement=CREATE DATABASE %s;
@@ -44,23 +44,23 @@ query_table_statement = SELECT %s, %s FROM %s %s ORDER BY %s;
 query_table_without_key_statement = SELECT %s FROM %s %s ORDER BY %s;
 # \u66F4\u65B0\u8868
 update_table_statement = UPDATE %s.%s SET %s = null WHERE (%s >= %d AND %s < %d);
-# \u00E5\u009C\u00A8JDBC\u00E4\u00BD\u00BF\u00E7\u0094\u00A8getTables\u00E6\u0097\u00B6\u00E6\u0098\u00AF\u00E5\u0090\u00A6\u00E9\u009C\u0080\u00E8\u00A6\u0081\u00E5\u008A\u00A0\u00E5\u00BC\u0095\u00E5\u008F\u00B7
+# \u5728JDBC\u4F7F\u7528getTables\u65F6\u662F\u5426\u9700\u8981\u52A0\u5F15\u53F7
 jdbc_need_quote=false
-# upsert\u00E8\u00AF\u00AD\u00E5\u008F\u00A5\u00E4\u00B8\u00AD\u00E9\u0097\u00B4\u00E9\u0083\u00A8\u00E5\u0088\u0086
+# upsert\u8BED\u53E5\u4E2D\u95F4\u90E8\u5206
 upsert_statement= ON CONFLICT ("RELATIONAL+KEY") DO UPDATE SET 
-# upsert\u00E8\u00AF\u00AD\u00E5\u008F\u00A5\u00E5\u0090\u008E\u00E9\u009D\u00A2\u00E9\u0083\u00A8\u00E5\u0088\u0086\u00E6\u00A0\u00BC\u00E5\u00BC\u008F
+# upsert\u8BED\u53E5\u540E\u9762\u90E8\u5206\u683C\u5F0F
 upsert_conflict_statement=%s = EXCLUDED.%s
-# \u00E8\u008E\u00B7\u00E5\u008F\u0096\u00E6\u0095\u00B0\u00E6\u008D\u00AE\u00E5\u00BA\u0093\u00E5\u0088\u0097\u00E8\u00A1\u00A8\u00E7\u009A\u0084SQL\u00E8\u00AF\u00AD\u00E5\u008F\u00A5
+# \u83B7\u53D6\u6570\u636E\u5E93\u5217\u8868\u7684SQL\u8BED\u53E5
 database_query_sql=SELECT datname FROM pg_database;
-# \u00E6\u0098\u00AF\u00E5\u0090\u00A6\u00E6\u0094\u00AF\u00E6\u008C\u0081full join
+# \u662F\u5426\u652F\u6301full join
 is_support_full_join=true
-# filter\u00E4\u00B8\u00AD\u00E6\u00AD\u00A3\u00E5\u0088\u0099\u00E5\u008C\u00B9\u00E9\u0085\u008D\u00E7\u009A\u0084\u00E7\u00AC\u00A6\u00E5\u008F\u00B7
+# filter\u4E2D\u6B63\u5219\u5339\u914D\u7684\u7B26\u53F7
 regex_like_symbol=~
-# filter\u00E4\u00B8\u00AD\u00E4\u00B8\u008D\u00E5\u008C\u00B9\u00E9\u0085\u008D\u00E6\u00AD\u00A3\u00E5\u0088\u0099\u00E8\u00A1\u00A8\u00E8\u00BE\u00BE\u00E5\u00BC\u008F\u00E7\u009A\u0084\u00E7\u00AC\u00A6\u00E5\u008F\u00B7
+# filter\u4E2D\u4E0D\u5339\u914D\u6B63\u5219\u8868\u8FBE\u5F0F\u7684\u7B26\u53F7
 not_regex_like_symbol=!~
-# jdbc\u00E5\u0085\u0083\u00E6\u0095\u00B0\u00E6\u008D\u00AE\u00E8\u008E\u00B7\u00E5\u008F\u0096\u00E6\u0098\u00AF\u00E5\u0090\u00A6\u00E6\u0094\u00AF\u00E6\u008C\u0081\u00E7\u0089\u00B9\u00E6\u00AE\u008A\u00E5\u00AD\u0097\u00E7\u00AC\u00A6\u00E8\u00AF\u0086\u00E5\u0088\u00AB
+# jdbc\u5143\u6570\u636E\u83B7\u53D6\u662F\u5426\u652F\u6301\u7279\u6B8A\u5B57\u7B26\u8BC6\u522B
 jdbc_support_special_char=true
-# pg\u00E4\u00B8\u00ADpublic\u00E9\u0083\u00A8\u00E5\u0088\u0086\u00E4\u00B8\u00BA\u00E9\u009D\u009E\u00E5\u0085\u0083\u00E6\u0095\u00B0\u00E6\u008D\u00AE\u00EF\u00BC\u0088\u00E7\u009C\u009F\u00E5\u00AE\u009E\u00E6\u0095\u00B0\u00E6\u008D\u00AE\u00EF\u00BC\u0089\u00E9\u0083\u00A8\u00E5\u0088\u0086
+# pg\u4E2Dpublic\u90E8\u5206\u4E3A\u975E\u5143\u6570\u636E\uFF08\u771F\u5B9E\u6570\u636E\uFF09\u90E8\u5206
 schema_pattern=public
 
 # Postgresql DataTypeTransformer
