1.修复配置文件乱码问题

--- a/dataSource/relational/src/main/resources/oceanbase-meta.properties
+++ b/dataSource/relational/src/main/resources/oceanbase-meta.properties
@@ -18,50 +18,50 @@
 # Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 #
 
-# \u914D\u7F6EMySQL META\u4EE5\u4F9BJDBCMeta\u8BFB\u53D6
+# 配置MySQL META以供JDBCMeta读取
 
-# \u9A71\u52A8\u7C7B
+# 驱动类
 driver_class=com.oceanbase.jdbc.Driver
-# \u9ED8\u8BA4\u6570\u636E\u5E93
+# 默认数据库
 default_database=oceanbase
-# \u7CFB\u7EDF\u6570\u636E\u5E93\uFF0C\u7528\u4E8E\u8FC7\u6EE4
+# 系统数据库，用于过滤
 system_databases=test,mysql,information_schema
-# \u7528\u4E8E\u5305\u88F9\u8868\u540D\u548C\u5B57\u6BB5\u540D\u7684\u5F15\u53F7
+# 用于包裹表名和字段名的引号
 quote=`
-# \u5220\u9664\u6570\u636E\u5E93\u7684SQL\u8BED\u53E5
+# 删除数据库的SQL语句
 drop_database_statement=DROP DATABASE IF EXISTS %s;
-# \u521B\u5EFA\u6570\u636E\u5E93
+# 创建数据库
 create_database_statement=CREATE DATABASE %s;
-# \u521B\u5EFA\u8868
+# 创建表
 create_table_statement=CREATE TABLE %s.%s (%s %s NOT NULL, %s %s, PRIMARY KEY(%s));
-# \u589E\u52A0\u8868\u5B57\u6BB5
+# 增加表字段
 alter_table_add_column_statement=ALTER TABLE %s.%s ADD (%s %s);
-# \u5220\u9664\u8868\u5B57\u6BB5
+# 删除表字段
 alter_table_drop_column_statement=ALTER TABLE %s.%s DROP COLUMN %s;
-# \u67E5\u8BE2\u8868
+# 查询表
 query_table_statement = SELECT %s, %s FROM %s %s ORDER BY %s;
 #
 query_table_without_key_statement = SELECT %s FROM %s %s ORDER BY %s;
-# \u66F4\u65B0\u8868
+# 更新表
 update_table_statement = UPDATE %s.%s SET %s = null WHERE (%s >= %d AND %s < %d);
-# \u5728JDBC\u4F7F\u7528getTables\u65F6\u662F\u5426\u9700\u8981\u52A0\u5F15\u53F7
+# 在JDBC使用getTables时是否需要加引号
 jdbc_need_quote=false
-# upsert\u8BED\u53E5\u4E2D\u95F4\u90E8\u5206
+# upsert语句中间部分
 upsert_statement= ON DUPLICATE KEY UPDATE
-# upsert\u8BED\u53E5\u540E\u9762\u90E8\u5206\u683C\u5F0F
+# upsert语句后面部分格式
 upsert_conflict_statement= %s = VALUES(%s)
-# \u83B7\u53D6\u6570\u636E\u5E93\u5217\u8868\u7684SQL\u8BED\u53E5
+# 获取数据库列表的SQL语句
 database_query_sql=SELECT SCHEMA_NAME AS datname FROM information_schema.schemata;
-# \u662F\u5426\u652F\u6301full join
+# 是否支持full join
 is_support_full_join=false
-# filter\u4E2D\u6B63\u5219\u5339\u914D\u7684\u7B26\u53F7
+# filter中正则匹配的符号
 regex_like_symbol=REGEXP
-# filter\u4E2D\u4E0D\u5339\u914D\u6B63\u5219\u8868\u8FBE\u5F0F\u7684\u7B26\u53F7
+# filter中不匹配正则表达式的符号
 not_regex_like_symbol=NOT REGEXP
-# jdbc\u5143\u6570\u636E\u662F\u5426\u652F\u6301\u7279\u6B8A\u5B57\u7B26\u7684\u8BC6\u522B
+# jdbc元数据是否支持特殊字符的识别
 jdbc_support_special_char=false
 
-# \u914D\u7F6EMySQL DataTypeTransformer
+# 配置MySQL DataTypeTransformer
 TINYINT=IGinX-BOOLEAN
 SMALLINT=IGinX-INTEGER
 MEDIUMINT=IGinX-INTEGER
