--- a/.github/actions/service/vectordb/action.yml
+++ b/.github/actions/service/vectordb/action.yml
@@ -33,6 +33,7 @@ runs:
           run: |
               for port in ${{ inputs.ports }}; do
                 mkdir -p $port
+                mkdir -p volumes$port
                 cp -f docker/milvus/docker-compose.yml $port/docker-compose-$port.yml
                 sed -i"" -e "s/19530:19530/$port:19530/g" $port/docker-compose-$port.yml
                 sed -i"" -e "s/\/volumes/\/volumes$port/g" $port/docker-compose-$port.yml
