ci(db-ce): spilt db-ce into 5 jobs

--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -96,7 +96,7 @@ jobs:
                   Close-Optimizer: ${{ inputs.close-optimizer }}
                   Metadata: ${{ matrix.metadata }}
                   if-CapExp: true
-                  Test-Way: ${{ inputs.Test-Way }}
+                  Test-Way: ${{ matrix.test-way }}
 
             - name: Write DB history data
               shell: bash
