--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -98,6 +98,9 @@ jobs:
                   if-CapExp: true
                   Test-Way: ${{ matrix.test-way }}
 
+            - name: Start IGinX
+              uses: ./.github/actions/iginxRunner
+
             - name: Write DB history data
               shell: bash
               run: mvn test -q -Dtest=${{ matrix.DB-name }}HistoryDataGenerator#${{ matrix.test-way }} -DfailIfNoTests=false -P-format
