ci(db-ce): spilt db-ce into 5 jobs

--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -49,6 +49,7 @@ runs:
 
         - if: inputs.scope=='all'
           name: Write Python dependencies to requirements.txt
+          shell: bash
           run: |
               echo "pandas" >> requirements.txt
               echo "numpy" >> requirements.txt
