--- a/.github/workflows/assembly-test.yml
+++ b/.github/workflows/assembly-test.yml
@@ -97,8 +97,8 @@ jobs:
                   cd assembly/target/iginx-assembly-${{ env.VERSION }}-include
                   ./stopIGinX.${{ steps.platform.outputs.suffix }}
                   ./clearAllData.${{ steps.platform.outputs.suffix }}
-                  ls
-                  rm -rf transform_jobs
+                  ls sbin
+                  rm -rf sbin/transform_jobs
 
             - name: Save Final Workspace Tree
               run: tree assembly/target/iginx-assembly-${{ env.VERSION }}-include >final-tree.txt
@@ -106,6 +106,11 @@ jobs:
             - name: Compare Workspace Tree to Ensure Clean Up
               shell: bash
               run: |
+                  echo =============================
+                  cat origin-tree.txt
+                  echo =============================
+                  cat final-tree.txt
+                  echo =============================
                   diff origin-tree.txt final-tree.txt
                   exit $?
 
