--- a/.github/workflows/assembly-test.yml
+++ b/.github/workflows/assembly-test.yml
@@ -98,7 +98,7 @@ jobs:
                   ./stopIGinX.${{ steps.platform.outputs.suffix }}
                   ./clearAllData.${{ steps.platform.outputs.suffix }}
                   ls sbin
-                  rm -rf sbin/transform_jobs
+                  rm -r sbin/transform_jobs
 
             - name: Save Final Workspace Tree
               run: tree assembly/target/iginx-assembly-${{ env.VERSION }}-include >final-tree.txt
