--- a/.github/workflows/standalone-test.yml
+++ b/.github/workflows/standalone-test.yml
@@ -98,8 +98,10 @@ jobs:
                     "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_py_register_macos.sh" ${VERSION}
                   fi
 
-            - name: Run Transform Job test
-              if: always()
+            # two steps:
+            # 1. test relative path
+            # 2. prepare for restart test
+            - name: Run Transform Job tests
               shell: bash
               run: |
                   mvn test -q -Dtest=TransformJobPathIT#prepare -DfailIfNoTests=false -P-format
@@ -114,6 +116,20 @@ jobs:
                     "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_job_register_macos.sh" ${VERSION}
                   fi
                   mvn test -q -Dtest=TransformJobPathIT#verifyResult -DfailIfNoTests=false -P-format
+                  mvn test -q -Dtest=TransformJobRestartIT#prepare -DfailIfNoTests=false -P-format
+
+            - name: Stop IGinX
+              uses: ./.github/actions/iginxRunner
+              with:
+                if-stop: true
+
+            - name: Restart IGinX
+              uses: ./.github/actions/iginxRunner
+
+            - name: Verify Transform Job
+              shell: bash
+              run: |
+                mvn test -q -Dtest=TransformJobRestartIT#verifyJobExists -DfailIfNoTests=false -P-format
 
             - name: Show IGinX log
               if: always()
