--- a/.github/workflows/standalone-test.yml
+++ b/.github/workflows/standalone-test.yml
@@ -125,6 +125,8 @@ jobs:
 
             - name: Restart IGinX
               uses: ./.github/actions/iginxRunner
+              with:
+                if-test-udf: "true"
 
             - name: Verify Transform Job
               shell: bash
